--- a/src/app/components/review/review.component.html
+++ b/src/app/components/review/review.component.html
@@ -69,7 +69,7 @@
     </div>
     <p class="reviews-link">
         Veja mais avaliações no
-        <a href="https://maps.app.goo.gl/g7H2EayynyVw6iVM9" target="_blank">Google Reviews</a>
+        <a href="#" (click)="onMapsClick()">Google Reviews</a>
     </p>
     <div class=" section badge-trust">
         <div class="trust-badge">
